# OdabNote

./: .gitignore  README.md  SKILL.md  buggy_script.py  pyproject.toml  supabase_schema.sql  test_mcp.py
.github/: FUNDING.yml
docs/: founder_operating_philosophy.md
docs/01_기획/: PRD.md  tier_matrix.md
docs/02_설계/: WBS.md
src/mcp_mistake_guard/: __init__.py  cli.py  database.py  server.py
src/odab_note/: __init__.py  cli.py  database.py  server.py  sharing.py
tests/: test_mcp.py
