[project]
name = "odab-note"
version = "0.1.0"
description = "A complex mistake-guard and wrong-answer note (Odab-Note) MCP server for AI Agents"
authors = [
    { name = "Logan Lee", email = "logan@logans.company" }
]
dependencies = [
    "mcp>=0.1.0",
    "click>=8.0.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
odab = "mcp_mistake_guard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_mistake_guard"]
