[project]
name = "odab-note"
version = "0.1.0"
description = "Wrong-answer vaccine system for AI agents — learns error patterns and prevents repeated mistakes via MCP"
authors = [
    { name = "Logan Lee", email = "logan@logans.company" }
]
dependencies = [
    "mcp>=0.1.0",
    "click>=8.0.0",
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
odab = "odab_note.cli:main"
odab-note = "odab_note.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/odab_note"]
